--- a/index.html
+++ b/index.html
@@ -25,79 +25,79 @@
     <div class="wrapper"></div>
 
         <table style="
-        width:450px;
-        height: 550px;
-        ">
-            <tbody  style="
+            width:450px;
+            height: 550px;
             background-image: url(assets/bg.png);
             background-size: cover;
             background-repeat: no-repeat;
-            ">
+        ">
+            <tbody >
                 <tr>
                     <td colspan="3" style="
-                    font-size: 23px;
-                    letter-spacing: 2px;
-                    padding-top: 30px;
+                        font-size: 23px;
+                        letter-spacing: 2px;
+                        padding-top: 30px;
                     ">Click to it!</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
-                    font-size: 20px;
-                    font-weight: 300;
-                    padding-bottom: 50px;
-                    letter-spacing: 2px;
+                        font-size: 20px;
+                        font-weight: 300;
+                        padding-bottom: 50px;
+                        letter-spacing: 2px;
                     ">Sale ends tuesday.</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
-                    font-size: 35px;
-                    letter-spacing: 5px;
+                        font-size: 35px;
+                        letter-spacing: 5px;
                     ">Extra</td>
                 </tr>
                 <tr>
                     <td style="
-                    font-size: 220px;
-                    line-height: 0.9;
-                    text-align: end;
+                        font-size: 220px;
+                        line-height: 0.9;
+                        text-align: end;
                     ">30</td>
                     <td style="
-                    font-size: 35px;
+                        font-size: 35px;
                   ">%</td>
                     <td style="
-                    font-size: 35px;">FF</td>
+                        font-size: 35px;">FF</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
-                    font-size: 35px;
-                    letter-spacing: 5px;
-                    padding-bottom: 15px;
+                        font-size: 35px;
+                        letter-spacing: 5px;
+                        padding-bottom: 15px;
                     ">Everything⭑</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
-                    font-size: 22px;
-                    font-weight: 300;
-                    padding-bottom: 20px;
+                        font-size: 22px;
+                        font-weight: 300;
+                        padding-bottom: 20px;
                     ">with code sale30</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
-                    font-size: 18px;
-                    font-weight: 300;
-                    padding-top: 10px;
-                    padding-bottom: 20px;
+                        font-size: 18px;
+                        font-weight: 300;
+                        padding-top: 10px;
+                        padding-bottom: 20px;
                     ">online only.</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
-                    padding-bottom: 60px;
-                    "><button type="button" style="background-color: transparent;
-                    text-transform: uppercase;
-                    font-weight: 800;
-                    border: solid 1px black;
-                    height: 50px;
-                    width: 140px;
-                    font-size: 15px;
+                        padding-bottom: 60px;
+                    "><button type="button" style="
+                        background-color: transparent;
+                        text-transform: uppercase;
+                        font-weight: 800;
+                        border: solid 1px black;
+                        height: 50px;
+                        width: 140px;
+                        font-size: 15px;
                     ">Shop Now</td>
                 </tr>
             </tbody>
