--- a/index.html
+++ b/index.html
@@ -29,63 +29,60 @@
             height: 550px;
             background-image: url(assets/bg.png);
             background-size: cover;
-            background-repeat: no-repeat;
+            background-repeat: no-repeat; 
         ">
-            <tbody >
+            <tbody>
                 <tr>
                     <td colspan="3" style="
                         font-size: 23px;
                         letter-spacing: 2px;
-                        padding-top: 30px;
-                    ">Click to it!</td>
+                        padding-top: 30px;">Click to it!</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
                         font-size: 20px;
                         font-weight: 300;
                         padding-bottom: 50px;
-                        letter-spacing: 2px;
-                    ">Sale ends tuesday.</td>
+                        letter-spacing: 2px;">Sale ends tuesday.</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
                         font-size: 35px;
-                        letter-spacing: 5px;
-                    ">Extra</td>
+                        letter-spacing: 5px;">Extra</td>
                 </tr>
                 <tr>
                     <td style="
                         font-size: 220px;
                         line-height: 0.9;
                         text-align: end;
-                    ">30</td>
+                        width: 330px;">30</td>
                     <td style="
-                        font-size: 35px;
-                  ">%</td>
+                        font-size: 38px;
+                        position: absolute;
+                        top: 260px;
+                        left: 250px;">%</td>
                     <td style="
-                        font-size: 35px;">FF</td>
+                        font-size: 45px;
+                        text-align: start;">FF</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
                         font-size: 35px;
                         letter-spacing: 5px;
-                        padding-bottom: 15px;
-                    ">Everything⭑</td>
+                        padding-bottom: 15px;">Everything⭑</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
-                        font-size: 22px;
+                        font-size: 20px;
                         font-weight: 300;
-                        padding-bottom: 20px;
-                    ">with code sale30</td>
+                        padding-bottom: 20px;">with code sale30</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
                         font-size: 18px;
                         font-weight: 300;
                         padding-top: 10px;
-                        padding-bottom: 20px;
-                    ">online only.</td>
+                        padding-bottom: 20px;">online only.</td>
                 </tr>
                 <tr>
                     <td colspan="3" style="
@@ -94,11 +91,11 @@
                         background-color: transparent;
                         text-transform: uppercase;
                         font-weight: 800;
-                        border: solid 1px black;
+                        border: solid 1px rgb(88, 87, 87);
                         height: 50px;
                         width: 140px;
-                        font-size: 15px;
-                    ">Shop Now</td>
+                        font-size: 15px;">Shop Now</button>
+                    </td>
                 </tr>
             </tbody>
         </table>
